--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,3 +19,9 @@ commands:
   leaveblue:
     description: leaves team blue
     usage: /leaveblue
+  joinRace:
+    description: joins a race.
+    usage: /joinRace <race name>
+  createRace:
+    description: allows the server to create a race. players are not allowed to do this.
+    usage: createRace <race name> <color>
